# MadarRust

./: .dockerignore  .env  .env.example  .gitignore  20260522071724_initial_schema.sql  API_DOCUMENTATION.md  AUDIT_REPORT.md  BUNDLES_AUDIT.md  BUNDLES_NOTES.md  CLAUDE.md  CONTINUATION_BRIEF.md  CONTRACT.md  Cargo.toml  DASHBOARD_AGENT_PROMPT.md  DASHBOARD_INTEGRATION.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  IMPLEMENTATION_TODO.md  INVENTORY_AUDIT_AND_WIREFRAMES.md  INVENTORY_FOODICS_BRIEF.md  INVENTORY_PROD_MIGRATION_RUNBOOK.md  MENU_ADVISOR_NOTES.md  ONBOARDING_DASHBOARD.md  OVERNIGHT_AUDIT_PROMPT.md  POS_AGENT_PROMPT.md  POS_MIGRATION_RUNBOOK.md  PROD_RELEASE_RUNBOOK.md  PROJECT_INTEGRATION_NOTES.md  SHIM_TEARDOWN_PROMPT.md  SUFRIX-PORTFOLIO-CONTEXT.md  Schemas.sql  actix_handlers.txt  backend_advisor_code.txt  backfill_nested_translations.sh  backfill_orders.sh  cost_history_migration.sql  deploy_cost_engine.sh  diff.py  docker-compose.demo.yml  docker-compose.dev.yml  (+29 more)
.cargo/: mutants.toml
.sqlx/: query-008c9dc939242480c06b60a899820893161f1fc27fc0b5fcb83a0df3359b9025.json  query-0396ad947e5d4586efe69906b316148cc22a04e17bec703b054c74634c387cc4.json  query-03ffbf472cb054e35e9e00513a81661a7cc7bb57927cbb9bbbe3110f4c6c259f.json  query-1340a0763fb72b6932f649e64e2e2b8c788a4e59b53483c3235243ee932ac075.json  query-163da769ffa612129f721e30a9528af0ad8ac146aff968e0c01e53b51b1e1ca2.json  query-18ab9fc46499123bc293dba7b39a29b5f0059f5c3ce753d82b47c1ecd755a288.json  query-19c25a78cbec9d59759e0c242a71f736da9b9e0b123328f2c51fc71a03abfd7c.json  query-19f6a14aabcfe5cc21114d4008b9fdf90a08ee1497a39d13b6a56cbc0d208e45.json  query-1a67fce0a5600e5cfa441f4f94a436d35090fcadbf7c08e247bd71443e45be9e.json  query-1a6d55e9ae0a973770e2db1d5b865223934ce8e62f6a22327c523074b1cb3737.json  query-1eea73ab835475058083b83e964b9e4db5e131fa41acfddf26b29201679a4ca8.json  query-275470e82d0cdf4824e0a6582d1368cbba385e482744efcd28d6565f93467c68.json  query-27562c7d3a54d52ba196dd6bff793d0db529219950196c2b6c01543335dc2bb5.json  query-3682e92b456735b87f374abc91112edad203de8c68384cda3abbe4abd8cd740f.json  query-36b5a8a21b3cc6a4bffcd710bd8d7319ce7f5707bbb610c659d0b52e00dcae06.json  query-3914689ac5b0fc0c8d68154b2855648c0382765dedf8a5e2346e8edcda7495c3.json  query-5009aa44061f59c0c4266cbee7a74e84596a39160f6e8407049d6f2c0578c614.json  query-5095f77f4619dfcd752982cadba80c5765383c73c0ace054e2f1ac403c2d837a.json  query-5524bdff0c459f8379cec2429a7af12b4aecac4679522eb93748e65a3c57c9c8.json  query-578e8a84de607312e4e285a638de634abf9ab3706c66e77b90738b836959be8e.json  query-5f4825d093847e4635632225e2a9b71c5be51a6ae8327432b86cf9bc69b2ea1e.json  query-680f5895bd209328627b98bd0185b741f4b75150159f62e39b7bda13ea81a73a.json  query-6a10a2c37780ba8c0eb8e0b7baf372cd792a6dbbf684d4c633f130267724f9bf.json  query-6de08b0c3b26bae59c05ca4e56473738db2b597ae31bf18d143bc3461abdee0e.json  query-7bd89f77a1f93a8672ad7caa182327cca5a9d3f7669f69e318f58a4e7dc8517f.json  query-7c9836e004e168c4b52cde219ca9ed748f230ad3b86bafdc7db609efaae9a0f2.json  query-822a62122ca8d3110a56984e63f750012d6fddc8e6072b31a360c5954c23a979.json  query-8237d7f1ce1171f97468efe933bc95ef4f596b40ff9c0a05912fbf5e11b694dc.json  query-856a09ddf73dc6a0396ee63187f9cd54605d4031ff9c90852c6e655ffb5b7a90.json  query-8b7d9395521fc80f45f9c49b7b9c8cbb66b3870b57b1d9c65ab22e3dd09dd3c0.json  query-8df4bca3e7fd48a957feeae02a9c997f09af38d2692587d7ae2ca3cdf3284840.json  query-9b10d01183a544cad625019745c4d4cec5b4f58080f10041ab1325f52e52a105.json  query-9f3ffc8fa6abe7a82d9cd0ea0dacbf3a982986d064ee842318720d841272559f.json  query-a7da0bcd392c1763b0bed3f3d4f4418ce69f72e6963d2cba0fcf5b20be4c73c8.json  query-ac9634dad70ea10869f8a2cb32c3585a55f9e8fa586bccf211aa1df469c6f2b9.json  query-b841d7359c8e605b23760cd2164bf34aacc2ae9e7554c9e728401033c642ff55.json  query-bca18547b5d2f2127e317283a82f9cd1fe6b94c3daa588ce6ce135a40748a640.json  query-bf7c9190793c3dda3d3847026174d96428a6ca851059bf11f1228c926ef05d7e.json  query-c0767441d7294b48012eec899f0c69a82cc8eb5f3cc855578cfdd9eef30e5288.json  query-c244b2cd7bc0e682ede763560d9106378660091ae8e890c54c5a0d80b3840e18.json  (+7 more)
agent_prompts/: test_prompt_adjustments.md  test_prompt_auth.md  test_prompt_branches.md  test_prompt_bundles.md  test_prompt_discounts.md  test_prompt_inventory.md  test_prompt_menu.md  test_prompt_menu_advisor.md  test_prompt_orders.md  test_prompt_orgs.md  test_prompt_permissions.md  test_prompt_recipes.md  test_prompt_reports.md  test_prompt_shifts.md  test_prompt_uploads.md  test_prompt_users.md
api_dumps/: auth.txt  branches.txt  bundles.txt  discounts.txt  inventory.txt  menu.txt  menu_advisor.txt  orders.txt  orgs.txt  permissions.txt  recipes.txt  reports.txt  shifts.txt  uploads.txt  users.txt
deploy/: menu_unification_shim.sql
docs/: ai-analytics-roadmap.md
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: blend_weighted_cost.rs  calc_discount.rs  convert_units.rs  haversine.rs  round_piastres.rs  select_zone_fee.rs  summarize_line_costs.rs
loadtest/: README.md  madar-loadtest.vps.yml  run-vps-loadtest-mt.sh  run-vps-loadtest.sh  seed_loadtest.sql  (+1 more)
(+293 files in other folders)
