[package]
name = "madar-rust"
version = "0.1.0"
edition = "2024"
default-run = "madar-rust"

[dependencies]
actix-web = { version = "4", features = ["compress-brotli", "compress-gzip", "compress-zstd", "rustls-0_23"] }
actix-cors         = "0.7"
actix-multipart    = "0.8"
actix-files        = "0.6"
tokio              = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream       = { version = "0.1", features = ["sync", "time"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4", "v5", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
jsonwebtoken       = { version = "10", features = ["rust_crypto"] }
bcrypt             = "0.19"
argon2             = "0.5"
dotenvy            = "0.15"
thiserror          = "2"
tracing            = "0.1"
tracing-actix-web  = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures            = "0.3"
image              = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp"] }
rustls             = "0.23"
rustls-pemfile     = "2"
# sqlx HELD at 0.8: 0.9 gates every dynamic SQL string behind AssertSqlSafe
# (~71 call sites here) — a wide mechanical migration deferred so it does not
# collide with the in-flight modifier-redesign handler edits.
sqlx               = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "bigdecimal", "rust_decimal"] }
bigdecimal         = { version = "0.4", features = ["serde"] }
rust_decimal       = { version = "1", features = ["serde-float", "maths"] }
rust_decimal_macros = "1"
utoipa = { version = "5.5.0", features = ["actix_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
reqwest = { version = "0.13.4", features = ["json"] }
base64 = "0.22"
urlencoding = "2.1.3"
actix-governor = "0.10"
# Ergonomic async trait objects for the swappable AI provider interface
# (`src/ai/provider.rs`) — one small, ubiquitous proc-macro crate.
async-trait = "0.1"
moka               = { version = "0.12", features = ["future"] }
# QR card generation. `resvg` re-exports `usvg` and `tiny-skia` from the same
# release, so depending on it alone keeps the SVG/raster stack version-locked
# (no chance of a mismatched usvg/tiny-skia).
qrcode             = { version = "0.14", default-features = false }
# default-features=false drops `system-fonts`/`raster-images`: text shaping only,
# and font resolution is limited to the faces we explicitly load (no system-font
# fallback, no runtime filesystem dependency).
resvg              = { version = "0.47", default-features = false, features = ["text"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.27.0"
# Already in the tree via actix-web; named directly so tests can write
# `Service<actix_http::Request>` bounds for shared helpers.
actix-http = "3"
# Decode-verify rasterised QR output in tests (scannability is non-negotiable).
rqrr = "0.10"


[[bin]]
name = "madar-rust"
path = "src/main.rs"

[[bin]]
name = "export-openapi"
path = "src/bin/export_openapi.rs"

[[bin]]
name = "backfill-cost-snapshots"
path = "src/bin/backfill_cost_snapshots.rs"

[[bin]]
name = "backfill-recipe-units"
path = "src/bin/backfill_recipe_units.rs"

[[bin]]
name = "backfill-order-ref"
path = "src/bin/backfill_order_ref.rs"

[[bin]]
name = "backfill-menu-unification"
path = "src/bin/backfill_menu_unification.rs"

[[bin]]
name = "bundle-margin-flip"
path = "src/bin/bundle_margin_flip.rs"

[[bin]]
name = "fuzz-token"
path = "src/bin/fuzz_token.rs"

[lib]
name = "madar_rust"
path = "src/lib.rs"
