[package]
name = "madar-rust-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
rust_decimal = "1"
uuid = { version = "1", features = ["v4"] }
madar-rust = { path = ".." }

# Detach from the parent package so cargo doesn't try to fold fuzz/ into it.
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "round_piastres"
path = "fuzz_targets/round_piastres.rs"
test = false
doc = false
bench = false

[[bin]]
name = "calc_discount"
path = "fuzz_targets/calc_discount.rs"
test = false
doc = false
bench = false

[[bin]]
name = "convert_units"
path = "fuzz_targets/convert_units.rs"
test = false
doc = false
bench = false

[[bin]]
name = "haversine"
path = "fuzz_targets/haversine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "select_zone_fee"
path = "fuzz_targets/select_zone_fee.rs"
test = false
doc = false
bench = false

[[bin]]
name = "blend_weighted_cost"
path = "fuzz_targets/blend_weighted_cost.rs"
test = false
doc = false
bench = false

[[bin]]
name = "summarize_line_costs"
path = "fuzz_targets/summarize_line_costs.rs"
test = false
doc = false
bench = false
